Simplified product display and added better pictures

--- a/_data/products.yml
+++ b/_data/products.yml
@@ -1,7 +1,7 @@
 - name: Medium Handbag
   price: £30
-  img: medium-handbag.jpg
-  category: [handbag, highlight]
+  img: medium-handbag-multi.jpg
+  category: [handbags, highlight]
   preamble: |
     This medium size hand bag has a secure zip closure and is perfect for everyday use. Made from approximately 115 crisp packets it takes four to five days to create. Large enough for all of your everyday essentials and stylish enough to take anywhere. A high quality zip ensures that all of your belongings are kept safe and out of sight.
   description: |
@@ -9,16 +9,33 @@
 
 - name: Large Clutch Bag
   price: £25
-  img: large-clutch-bag.jpg
-  category: [handbag, highlight]
+  img: large-clutch-barcode.jpg
+  category: [handbags]
   preamble : | 
     This bag is hand crafted from over 100 crisp packets and finished with a quality magnetic clasp. Seen here in the popular barcode style but, as with all of the products, available in any style you'd like.
   description: 
 
 - name: Small Clutch Bag
   price: £20
-  img: small-clutch-bag.jpg
-  category: [handbag, highlight]
+  img: small-clutch-silver-black-front.jpg
+  category: [handbags, highlight]
   preamble: | 
     This small clutch is big enough to carry a purse, phone and a couple of other essentials while still being small enough to not get in your way. If you would like a particular colour or style please get in touch and I'll be happy to discuss options.  
   description:
+
+- name: Bookmark
+  price: £3
+  img: bookmark-multi.jpg
+  category: [gifts]
+  preamble: | 
+    E-book readers are great, as are our kindle covers, but sometimes it's nice to leave technology behind and drift away with a book in the good old dead tree format. Each bookmark is available in any colour and comes complete with a sturdy eyelet and ribbon.   
+  description:
+
+- name: Pencil Case
+  price: £8
+  img: pencil-case-blue.jpg
+  category: [gifts, highlight]
+  preamble: | 
+     These pencil cases are quickly becoming the talk of classrooms all over. Made with quality zip closures they will withstand many years of use.
+  description:
+  
