--- a/_data/products.yml
+++ b/_data/products.yml
@@ -18,7 +18,7 @@
   closure: Magnetic
   img: large-clutch-barcode.jpg
   category: [handbags]
-  strapline:
+  strapline: Eye-catchingly elegant
   preamble : | 
     This bag is hand crafted from over 100 crisp packets and finished with a quality magnetic clasp. Seen here in the popular barcode style but, as with all of the products, available in any style you'd like.
   description: 
