Change & to or in iPad dropdown and shorten text
Fixes #8

--- a/_data/products.yml
+++ b/_data/products.yml
@@ -99,7 +99,7 @@
 - id: ipad-cover
   paypal-id: NHHNEUNYQXC34
   options:
-   - iPad (2nd, 3rd &amp; 4th Generation): £20
+   - iPad (2nd, 3rd or 4th Gen): £20
    - iPad Mini: £15
   name: iPad Cover
   price: £20
