Display iPad image
Fixes #1

--- a/_data/products.yml
+++ b/_data/products.yml
@@ -105,7 +105,7 @@
   price: £20
   size: 19.5cm x 25cm x 3cm (for iPad 2 to 4th generation)
   closure: 
-  img: 
+  img: new/ipad-multi-device-back.jpg
   category: [devices]
   strapline: Because you'll drop it
   preamble: | 
