Shorten preamble of medium handbag to better match other highlighted products
moved text to description

--- a/_data/products.yml
+++ b/_data/products.yml
@@ -11,9 +11,9 @@
   category: [handbags, highlight]
   strapline: Stylish and practical
   preamble: |
-    This medium size hand bag has a secure zip closure and is perfect for everyday use. Made from approximately 115 crisp packets it takes four to five days to create. Large enough for all of your everyday essentials and stylish enough to take anywhere. A high quality zip ensures that all of your belongings are kept safe and out of sight.
+    This medium size hand bag has a secure zip closure and is perfect for everyday use. Large enough for all of your everyday essentials and stylish enough to take anywhere. A high quality zip ensures that all of your belongings are kept safe and out of sight.
   description: |
-    Shown here in the traditional multicoloured style which offers the maximum variety for impromptu 'name the packet' sessions. If you would like a particular colour or theme just let me know, I'll be happy to hear what you have in mind. 
+    Shown here in the traditional multicoloured style which offers the maximum variety for impromptu 'name the packet' sessions. Made from approximately 115 crisp packets it takes four to five days to create. If you would like a particular colour or theme just let me know, I'll be happy to hear what you have in mind.
 
 - id: large-clutch-bag
   paypal-id: WSQVCMAT3656S
