Added author, description and keywords meta tags
Fixes #22

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
 name: Ecoweave - creativity with crisp packets 
 markdown: redcarpet
 pygments: true
+author: ecoweave.co.uk
+description: Upcycling discarded crisp packets to create wonderfully functional products
+keywords:
+- crisp packet bag
+- crisp packet
+- upcycle
+- candy wrapper
+- crisp packet products
