Fixed large-clutch description

--- a/_data/products.yml
+++ b/_data/products.yml
@@ -28,7 +28,7 @@
   category: [handbags]
   strapline: Eye-catchingly elegant
   preamble : | 
-    This bag is hand crafted from over 100 crisp packets and finished with a quality magnetic clasp. Seen here in the popular barcode style but, as with all of the products, available in any style you'd like.
+    This bag is hand crafted from over 100 crisp packets and finished with a quality magnetic clasp. Seen here in the popular multicolour style but, as with all of the products, available in any style you'd like.
   description: 
 
 - id: small-clutch-bag
