Getting page title from config and front matter
Set default prefix in config (Ecoweave) and append
page.title in header. Also uses page.title as the H1
on each page. Fixes #24

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ name: Ecoweave - creativity with crisp packets
 markdown: redcarpet
 pygments: true
 author: ecoweave.co.uk
+title: Ecoweave
 description: Upcycling discarded crisp packets to create wonderfully functional products
 keywords:
 - crisp packet bag
